k8s/caas/bases/adder/deployment-http1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adder-http1
  labels:
    app: adder-http1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adder-http1
  template:
    metadata:
      labels:
        app: adder-http1
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: work-pool
      containers:
      - name: "adder"
        image: eu.gcr.io/quorumpreempt/adder
        ports:
          - name: http-port
            containerPort: 8081
        command:
        - /service/adder-proxy
        readinessProbe:
          httpGet:
            path: /health
            scheme: HTTP
            port: 8081
          initialDelaySeconds: 3
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
