k8s/caas/bases/adder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adder
  labels:
    app: adder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adder
  template:
    metadata:
      labels:
        app: adder
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: work-pool
      serviceAccountName: quorum-client-sa
      volumes:
      - name: wallet
        emptyDir: {}
      containers:
      - name: "adder"
        image: eu.gcr.io/quorumpreempt/adder
        ports:
          - name: grpc-port
            containerPort: 9091
        command:
          - /service/adder-service

        readinessProbe:
          exec:
            command: ["/service/grpc_health_probe", "-service=readiness", "-addr=:9091"]
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - mountPath: /service/wallet
          name: wallet
