k8s/caas/bases/adder/service-http1.yaml
apiVersion: v1
kind: Service
metadata:
  name: adder-http1
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http-port
      port: 8081
      targetPort: 8081
  selector:
    app: adder-http1
